[package]
name = "sha-to-hex"
version = "1.0.3"
authors = ["Sibz <12050358+Sibz@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/rustanigans/sha-to-hex"
description = "Simple function to encode string using secret and return hex string"
license-file = "license.md"

[dependencies]
ring = "^0.17"
const-hex = "^1"
